RESOLVED FIXED169092
Fix addressing mode for B3WasmAddress
https://bugs.webkit.org/show_bug.cgi?id=169092
Summary Fix addressing mode for B3WasmAddress
Keith Miller
Reported 2017-03-02 13:03:19 PST
Fix addressing mode for B3WasmAddress
Attachments
Patch (1.73 KB, patch)
2017-03-02 13:14 PST, Keith Miller
fpizlo: review+
Keith Miller
Comment 1 2017-03-02 13:14:21 PST
Mark Lam
Comment 2 2017-03-02 13:15:39 PST
Comment on attachment 303228 [details] Patch r=me
Filip Pizlo
Comment 3 2017-03-02 13:17:16 PST
Comment on attachment 303228 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=303228&action=review > Source/JavaScriptCore/ChangeLog:11 > + Fix the potential addressing modes for B3WasmAddress. ARM does not > + support a base + index*1 + offset addressing mode. I think when I > + read it the first time I assumed it would always work on both ARM > + and X86. While true for X86 it's not true for ARM. ARM totally supports base + index*1.
Filip Pizlo
Comment 4 2017-03-02 13:18:02 PST
Comment on attachment 303228 [details] Patch I get it now.
Keith Miller
Comment 5 2017-03-02 13:20:58 PST
Note You need to log in before you can comment on or make changes to this bug.