Fix addressing mode for B3WasmAddress https://bugs.webkit.org/show_bug.cgi?id=169092

Reviewed by Filip Pizlo.

Fix the potential addressing modes for B3WasmAddress. ARM does not
support a base + index*1 + offset addressing mode. I think when I
read it the first time I assumed it would always work on both ARM
and X86. While true for X86 it's not true for ARM.

* b3/B3LowerToAir.cpp:
(JSC::B3::Air::LowerToAir::effectiveAddr):

Canonical link: https://commits.webkit.org/186091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213299 268f45cc-cd09-0410-ab3c-d52691b4dbfc